added grid image selector for contributors only (not podcasts)

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -36,3 +36,5 @@
 @import "components/progress-spinner/index";
 @import "components/page-navigator/index";
 @import "components/colour-picker/index";
+@import "components/modal/index";
+@import "components/grid-image-selector/index";
